--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -274,17 +274,20 @@
  <string name="synchronized_to_server">	Your Activity is Synchronized to the server!	</string>
 
 
+ <string name="new_Trade_Licence"> New Trade Licence	</string>
  <string name="trade_licence_title">	Trade Licence	</string>
  <string name="new_trade">	New	</string>
  <string name="existing_trade">	Existing	</string>
 
 
  <string name="field_visit_title">	Field Visit	</string>
+ <string name="field_visit_list">	Field Visit List	</string>
  <string name="tax_type">	Tax Type	</string>
  <string name="service_list_field_type">	ServiceListField Type	</string>
  <string name="request_id">	Request ID	</string>
  <string name="applicant_name">	Applicant Name	</string>
  <string name="current_status">	Current Status	</string>
+ <string name="status">	 Status	</string>
 
 
  <string name="assessment_no">	Assessment No	</string>
@@ -317,7 +320,6 @@
  <string name="upload">	Upload	</string>
 
 
- <string name="trade_code">	Trade Code	</string>
  <string name="mobile">	Mobile	</string>
  <string name="_trader_email">	Email	</string>
 
