--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="version_msg">This This version of Town Panchayat TAX is no longer supported. Please go to Official Site and install new version</string>
     <string name="assessment_Status">Assessment Status</string>
     <string name="tax_Type">Tax Type</string>
+    <string name="select_tax_Type">Select tax type to scan QR Code !</string>
     <string name="assessment_Id">Assessment Id</string>
     <string name="submit">Submit</string>
     <string name="take_Photo">Take Photo</string>
@@ -194,6 +195,7 @@
     <string name="remarks">Remarks</string>
     <string name="previous">Previous</string>
     <string name="try_after_some_time">Try after some time!</string>
+    <string name="scan_again">Scan Again!</string>
     <string name="select_ServiceListFieldVisit">Select ServiceListFieldVisit</string>
     <string name="select_Status">Select Status</string>
     <string name="first_Capture_Image_then_add_another_Image">First Capture Image then add another Image!</string>
@@ -338,40 +340,45 @@
  <string name="maximum_5_trader_Details_Stored_in_Local">	Maximum 5 Trader Details Stored in Local	</string>
  <string name="select_ProductionSale">Select Production Sale</string>
 
-  <!--  //21/01/2021
+ <string name="town_Panchayat">Town Panchayat</string>
+ <string name="individual_user">Individual</string>
+ <string name="select_from_and_to_Date">Select from and to Date</string>
 
-    <string name="Applicant_Name_Tamil">	விண்ணப்பதாரர் பெயர்	</string>
-    <string name="New_Trade_Licence_Tamil">	புதிய வர்த்தக உரிமம்	</string>
-    <string name="Trader_Code_Tamil">	வர்த்தகர்கள் குறியீடு	</string>
-    <string name="Date_Tamil">	தேதி	</string>
-    <string name="License_Type_Tamil">	உரிம வகை	</string>
-    <string name="Trade_Description_Tamil">	வர்த்தக விளக்கம்	</string>
-    <string name="Gender_Tamil">	பாலினம்	</string>
-    <string name="Age_Tamil">	வயது	</string>
-    <string name="Father_husband_name_tamil">	தந்தை / கணவரின் பெயர்	</string>
-    <string name="Email_ID_tamil">	மின்னஞ்சல் முகவரி	</string>
-    <string name="Establishment_Name_Tamil">	ஸ்தாபனத்தின் பெயர்	</string>
-    <string name="Ward_Name_Tamil">	வார்டு பெயர்	</string>
-    <string name="Street_name_tamil">	தெருவின் பெயர்	</string>
-    <string name="Door_Number_Tamil">	கதவு எண்	</string>
-    <string name="License_Validity_Tamil">	உரிமம் செல்லுபடியாகும் காலம்	</string>
-    <string name="Amount_to_Pay_Tamil">	செலுத்த வேண்டிய தொகை	</string>
-    <string name="View_Image_Tamil">	படத்தைக் காண்க	</string>
-    <string name="Submit_tamil">	சமர்ப்பிக்கவும்	</string>
-    <string name="Existing_Tamil">	பழையது	</string>
-    <string name="New_tamil">	புதியது	</string>
-    <string name="Trade_License_Tamil">	வர்த்தக உரிமம்	</string>
 
-    <string name="Assessment_Status_Tamil">	மதிப்பீட்டு நிலை	</string>
-    <string name="Daily_Collection_Tamil">	தினசரி சேகரிப்பு	</string>
-    <string name="Daily_AMount_Tamil">	தினசரி தொகை	</string>
-    <string name="Tax_Type_Tamil">	வரி வகை	</string>
-    <string name="Assessment_ID_Tamil">	மதிப்பீட்டு ஐடி	</string>
-    <string name="Current_Status_Tamil">	தற்போதைய நிலை	</string>
-    <string name="Remarks_Tamil">	கருத்து	</string>
-    <string name="Take_photo_Tamil">	புகைப்படம் எடுக்கவும்	</string>
-    <string name="Address_Tamil">	முகவரி	</string>
-    <string name="Area_Squre_Fit_Tamil">	நில அளவு	</string>-->
+ <!--  //21/01/2021
+
+   <string name="Applicant_Name_Tamil">	விண்ணப்பதாரர் பெயர்	</string>
+   <string name="New_Trade_Licence_Tamil">	புதிய வர்த்தக உரிமம்	</string>
+   <string name="Trader_Code_Tamil">	வர்த்தகர்கள் குறியீடு	</string>
+   <string name="Date_Tamil">	தேதி	</string>
+   <string name="License_Type_Tamil">	உரிம வகை	</string>
+   <string name="Trade_Description_Tamil">	வர்த்தக விளக்கம்	</string>
+   <string name="Gender_Tamil">	பாலினம்	</string>
+   <string name="Age_Tamil">	வயது	</string>
+   <string name="Father_husband_name_tamil">	தந்தை / கணவரின் பெயர்	</string>
+   <string name="Email_ID_tamil">	மின்னஞ்சல் முகவரி	</string>
+   <string name="Establishment_Name_Tamil">	ஸ்தாபனத்தின் பெயர்	</string>
+   <string name="Ward_Name_Tamil">	வார்டு பெயர்	</string>
+   <string name="Street_name_tamil">	தெருவின் பெயர்	</string>
+   <string name="Door_Number_Tamil">	கதவு எண்	</string>
+   <string name="License_Validity_Tamil">	உரிமம் செல்லுபடியாகும் காலம்	</string>
+   <string name="Amount_to_Pay_Tamil">	செலுத்த வேண்டிய தொகை	</string>
+   <string name="View_Image_Tamil">	படத்தைக் காண்க	</string>
+   <string name="Submit_tamil">	சமர்ப்பிக்கவும்	</string>
+   <string name="Existing_Tamil">	பழையது	</string>
+   <string name="New_tamil">	புதியது	</string>
+   <string name="Trade_License_Tamil">	வர்த்தக உரிமம்	</string>
+
+   <string name="Assessment_Status_Tamil">	மதிப்பீட்டு நிலை	</string>
+   <string name="Daily_Collection_Tamil">	தினசரி சேகரிப்பு	</string>
+   <string name="Daily_AMount_Tamil">	தினசரி தொகை	</string>
+   <string name="Tax_Type_Tamil">	வரி வகை	</string>
+   <string name="Assessment_ID_Tamil">	மதிப்பீட்டு ஐடி	</string>
+   <string name="Current_Status_Tamil">	தற்போதைய நிலை	</string>
+   <string name="Remarks_Tamil">	கருத்து	</string>
+   <string name="Take_photo_Tamil">	புகைப்படம் எடுக்கவும்	</string>
+   <string name="Address_Tamil">	முகவரி	</string>
+   <string name="Area_Squre_Fit_Tamil">	நில அளவு	</string>-->
  <string name="user_name"> பயனர் பெயர்</string>
  <string name="password"> கடவுச்சொல்</string>
  <string name="log_in"> உள்நுழைய</string>
