Custom date range picker design .

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -330,6 +330,8 @@
 
 
  <string name="mobile">	Mobile	</string>
+ <string name="from">	From	</string>
+ <string name="to">	To	</string>
  <string name="_trader_email">	Email	</string>
 
 
