--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="select_Ward">Select Ward</string>
     <string name="select_TradeCode">Select TradeCode</string>
     <string name="select_Street">Select Street</string>
+    <string name="select_assessment">Select Assessment</string>
     <string name="please_Select_Street">Please Select Street!</string>
     <string name="select_Any_One">Select Any One!</string>
     <string name="next">Next</string>
@@ -145,6 +146,7 @@
     <string name="take_Photo">Take Photo</string>
     <string name="save_IMAGE">SAVE IMAGE</string>
     <string name="daily_Collection">Tax Collection</string>
+    <string name="property">Property</string>
     <string name="year">Year</string>
     <string name="date">Date</string>
     <string name="dashboard">Dashboard</string>
